# sloan-sim

./: .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: main.yml  run-pytest.yml
resources/: config.toml
src/: __init__.py
src/core/: __init__.py  config.py  loan_engine.py  models.py  simulation_engine.py
src/core/plans/: __init__.py  base.py  plan_1.py  plan_2.py  plan_3.py  plan_4.py  plan_5.py
src/sloan_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py
tests/core/: test_loan_engine.py  test_simulation_engine.py
