[project]
name = "sloan-sim"
version = "0.1.0"
description = "Student loan repayment simulator UK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["D"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
